# phylactery

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: deque.rs  dequeue.rs  kv_store.rs  ring_buffer.rs
client/: Cargo.toml  build.rs
client/src/: entry.rs  error.rs  phylactery.rs
client/src/io/: mod.rs
client/src/queue/: checkpoint.rs  location.rs  mod.rs
client/tests/: queue.rs
daemon/: Cargo.toml  build.rs
daemon/src/: main.rs  msg.rs  phylactery.rs
docs/: buffer.md  daemon.md  dequeue.md  io.md  queue.md  ringbuffer.md  store.md  store?.md  toc.md  wip.md
proto/: communication.proto
src/: error.rs  lib.rs
src/alloc/: error.rs  mod.rs
src/buffer/: error.rs  file.rs  mem.rs  mmap.rs  mod.rs
src/codec/: error.rs  mod.rs
src/deque/: error.rs  file.rs  location.rs  mod.rs  node.rs
src/deque/design/mermaid/: insert.mmd
src/dequeue/: error.rs  mod.rs  node.rs
src/entry/: error.rs  meta.rs  mod.rs  readable.rs  v1.rs  version.rs  writable.rs
src/entry/v1/: error.rs  meta.rs  mod.rs  readable.rs  writable.rs
src/kv_store/: config.rs  error.rs  graveyard.rs  metadata.rs  mod.rs  store.rs
src/ring_buffer/: entry.rs  error.rs  mod.rs
src/scheduler/: mod.rs
src/store/: error.rs  graveyard.rs.old  log.rs  metadata.rs  mod.rs  store.rs  store.rs.old
src/store/cache/: mod.rs
src/store/data/: error.rs  mod.rs  store.rs
src/store/data/shard/: error.rs  mod.rs
src/store/graveyard/: graveyard.rs  mod.rs  tombstone.rs
src/store/meta/: buffer_owner.rs  error.rs  mod.rs  store.rs
src/store/meta/shard/: buffer_owner.rs  delete.rs  error.rs  get.rs  mod.rs  put.rs
