[package]
edition = "2021"
name = "phylactery"
version = "0.1.0"

# We don't want to have silent failures
[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "phylactery"

[dependencies]
crc32fast = "1"
memmap2 = "0"
thiserror = "1"

necronomicon = { git = "https://github.com/nyanzoo/necronomicon", branch = "master" }
# necronomicon = { path = "../necronomicon" }

[dev-dependencies]
coverage-helper = "0"
criterion = "0.5"
matches = "0"
tempfile = "3"

[[bench]]
name = "ring_buffer"
harness = false

[[bench]]
name = "dequeue"
harness = false

[[bench]]
name = "kv_store"
harness = false
