[package]
edition = "2021"
name = "phylactery"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "phylactery"

[dependencies]
crc32fast = "1"
crossbeam = "0.8"
hashlink = "0.9"
hashring = "0.3"
libc = "0.2"
log = "0.4"
memmap2 = "0"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

necronomicon = { git = "https://github.com/nyanzoo/necronomicon", branch = "develop" }
# necronomicon = { path = "../necronomicon" }

[dev-dependencies]
coverage-helper = "0"
criterion = "0.5"
matches = "0"
rand = "0.8"
tempfile = "3"
test-case = "3"

necronomicon = { git = "https://github.com/nyanzoo/necronomicon", branch = "develop", features = [
    "test",
    "timeout",
] }

necronomicon = { git = "https://github.com/nyanzoo/necronomicon", branch = "develop", features = [
    "test",
] }

[[bench]]
name = "ring_buffer"
harness = false

[[bench]]
name = "deque"
harness = false

[[bench]]
name = "kv_store"
harness = false


[features]
default = []
timeout = ["necronomicon/timeout"]
